testsuite/tests/properties/invalid_dflt_arg_val/bad_literal_1/test.lkt
from common import FooNode

class Example: FooNode {
    @exported fun p(a: Example=node): FooNode = a
}
